fix li font size too large

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -730,7 +730,7 @@ ul {
   padding-left: 20px;
 }
 
-ul li{
+.posts li{
   font-size: 20px;
 }
 
